# Claude-Brain

./: .gitignore  CLAUDE.md  Claude Brain — 技术设计文档.md  README.md  WORKFLOW.md  brain.py  brain.sh  config.example.yaml  config.yaml  notion_client.py  pyproject.toml
.claude/: settings.json
.claude/commands/: init.md
.claude/skills/brain-init/: SKILL.md
.claude/skills/test-run/: SKILL.md
brain/: __main__.py  cli.py  config.py  main.py  notion.py  process.py  protocol.py  setup.py  workspace.py
brain/channels/: base.py
brain/channels/feishu/: adapter.py  client.py
brain/core/: dispatcher.py  outbox.py  process.py  protocol.py  tester.py  watchdog.py
brain/data/: config.example.yaml
brain/data/template/: CLAUDE.md  HEARTBEAT.md  HEARTBEAT_SYSTEM.md
brain/data/template/.claude/: settings.json
brain/data/v1_templates/executor/: CLAUDE.md
brain/data/v1_templates/planner/: CLAUDE.md
brain/data/v1_templates/shared/: OUTBOX_FORMAT.md  WORKFLOW.md  validate_outbox.py
brain/data/v1_templates/tester/: CLAUDE.md
brain/docs/: architecture.md  feishu.md  notion.md
brain/executor/: cc.py
brain/infra/: db.py  feishu_notify.py  logger.py
brain/integrations/: notion.py
brain/memory/: _llm.py  backfill.py  extractor.py  ledger.py  retriever.py  store.py  views.py
brain/observability/: __init__.py  analyzer.py  reader.py
brain/scheduler/: heartbeat.py
brain/session/: manager.py
brain/workspace/: manager.py  setup.py
docs/: dev-status.md  feishu.md  memory-phase-b-design.md  tech_plan.md
templates/: CLAUDE_executor.md  CLAUDE_planner.md
templates/executor/: CLAUDE.md
templates/executor/.claude/: settings.json
templates/executor/.claude/hooks/: log_trajectory.sh
templates/planner/: CLAUDE.md  WORKFLOW.md
templates/shared/: OUTBOX_FORMAT.md  WORKFLOW.md  validate_outbox.py
templates/tester/: CLAUDE.md
templates/v2/: CLAUDE.md
tests/: test_cc_executor.py  test_cli.py  test_cold_reset.py  test_config.py  test_context_token_safety.py  test_executor_template.py  test_extractor_schema.py  test_feishu_card_action.py  test_feishu_client.py  test_feishu_notify.py  test_feishu_post_msg.py  test_heartbeat.py  test_main.py  test_memory_backfill.py  test_memory_extractor.py  test_memory_integration.py  test_memory_ledger.py  test_memory_llm.py  test_memory_sessions.py  test_memory_views.py  test_notion_retry.py  test_observability.py  test_outbox.py  test_scheduled_pickup.py  test_session_lifecycle.py  test_session_temperature.py  test_setup.py  test_warm_compact.py  test_workspace_manager.py  test_workspace_setup.py
(+8 files in other folders)
