[project]
name = "ccbrain"
version = "0.4.6"
description = "Personal AI daemon — Feishu chat + Notion tasks, powered by Claude Code"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "lark-oapi>=1.5",
    "claude-agent-sdk>=0.1",
]

[dependency-groups]
dev = ["ruff>=0.11", "pytest>=8.0", "pytest-asyncio>=0.25", "pytest-cov>=6.0", "diff-cover>=9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]

[project.scripts]
ccbrain = "brain.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["brain"]
omit = [
    "brain/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E701"]
